docs: especificaciÃ³n completa del botÃ³n Clonar Pedido
- AÃ±adir ubicaciones exactas en layout y flexipage
- Documentar configuraciÃ³n especÃ­fica del WebLink
- Actualizar package.xml con layout y flexipage
- Crear especificaciÃ³n detallada del botÃ³n

--- a/deploy/package.xml
+++ b/deploy/package.xml
@@ -12,5 +12,13 @@
     <members>Order__c</members>
     <name>CustomObject</name>
   </types>
+  <types>
+    <members>Order__c-Formato Pedido</members>
+    <name>Layout</name>
+  </types>
+  <types>
+    <members>Pedido_P_gina_de_registro</members>
+    <name>FlexiPage</name>
+  </types>
   <version>64.0</version>
 </Package>
